css/style.css
@charset 'UTF-8';
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
}
:root {
     --color-elements: #5740C3;
     --color-text: #2c2c2c;
     --color-shadows-elems: #00000033;
     --color-error: #DC2626;
     --color-success: #16A34A;
}
header > h1{
     font-size: 3em;
     padding-left: 13px;
     grid-column: 1 / span 3;
}
header, textarea, body, select, #btn-limits{
     font-family: "Inter", Arial, Helvetica, sans-serif;
}

body{
     margin: 10px;
     background: linear-gradient(to right, #fdfcfc, #ffff);
}
main {
     display: grid;
     grid-template-columns: repeat(11, 1fr);
     align-items: flex-start;
     justify-items: center;
     padding: 5px;
     margin: 4px;
     gap: 3em;
}
.sidebar{
     display:grid;
     grid-template-columns: 1fr;
     align-items: center;
     gap: 2em;
     grid-column: 7 / 10;
}
.stats-area{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 11px;
     justify-content: flex-end;
}
.card-stat {
     display: flex;
     flex-direction: column;
     justify-content: center;
     border: 1px solid #00000028;
     border-radius: 3px;
     gap: 5px;
     font-size: 1em;
     line-height: 1.4em;
     padding: 10px;
     width: 130px;
     height: 80px;
     text-align: center;
}
.card-stat > p{
     font-size: 1.1em;
}
.social-limits{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     gap: 7px;
     margin-bottom: 12px;
}
select {
     width: 250px;
     height: 33px;
     cursor: pointer;
     border: 1px solid var(--color-shadows-elems);
     padding: 5px;
     border-radius: 3px;
}

#btn-limits {
     width: 130px;
     height: 33px;
     background-color: var(--color-elements);
     color: #fff;
     border: none;
     cursor: pointer;
     border-radius: 3px;
}
#btn-limits:hover{
     background-color: #1D0821;
     font-weight: bold;
}
textarea {
     width: 700px;
     height: 450px;
     padding: 10px;
     border: 1px solid var(--color-shadows-elems);
     border-radius: 4px;
     margin-top: 20px;
     font-size: 17px;
     grid-column: 1 / span 9;
}

